Actualización de la documentación de instalación de Mozo y VendeYA en cPanel, incluyendo mejoras en la estructura y contenido. Se han corregido enlaces, se han añadido secciones de requisitos previos y pasos detallados para la instalación, y se ha eliminado una imagen obsoleta. Además, se han ajustado las rutas en varios documentos para mantener la consistencia.

--- a/versioned_docs/version-ProX/Modulos/Complementarios/Guias-de-Remision/1-G.R.Remitente.md
+++ b/versioned_docs/version-ProX/Modulos/Complementarios/Guias-de-Remision/1-G.R.Remitente.md
@@ -39,6 +39,12 @@ Tendrás que rellenar los siguientes campos necesarios:
 
 
 - **Punto de partida:** Selecciona o crea un nuevo punto de partida con el botón **+Nuevo**.
+
+:::info
+El **punto de partida** corresponde a la dirección registrada en la sucursal que está siendo utilizada al momento de emitir la Guía de Remisión Electrónica (GRE).
+:::
+
+
 - **Punto de llegada:** Selecciona o crea un nuevo punto de llegada con el botón **+Nuevo**.
 
 :::danger IMPORTANTE:
