fix: ajustes en orden y palabras claves

--- a/versioned_docs/version-QrBuho/qr-devs/api/api-aplicacion/admin/1-register-tenant.api.mdx
+++ b/versioned_docs/version-QrBuho/qr-devs/api/api-aplicacion/admin/1-register-tenant.api.mdx
@@ -1,8 +1,8 @@
 ---
 id: register-tenant
-title: "Registrar tenant"
+title: "Crear tenant"
 description: "Crea un nuevo tenant (cliente)"
-sidebar_label: "Registrar tenant"
+sidebar_label: "Crear tenant"
 sidebar_position: "3"
 hide_title: true
 hide_table_of_contents: true
