--- a/versioned_docs/version-QrBuho/qr-devs/api/api-aplicacion/admin/2-register-plan.api.mdx
+++ b/versioned_docs/version-QrBuho/qr-devs/api/api-aplicacion/admin/2-register-plan.api.mdx
@@ -1,8 +1,8 @@
 ---
 id: register-plan
-title: "Registrar plan"
+title: "Crear plan"
 description: "Crea un nuevo plan de suscripción"
-sidebar_label: "Registrar plan"
+sidebar_label: "Crear plan"
 sidebar_position: "5"
 hide_title: true
 hide_table_of_contents: true
